# rl-wallet-b3

./: .gitignore  README.md  documentacao.txt  experiments_q_learning.py  experiments_td.py  main.py  main_td.py  pyproject.toml  requirements.txt  resultados.ipynb
agentes/: Q_learning.py  TD_learning.py  __init__.py  base_agent.py
ambiente/: portfolio_env.py
helpers/: __init__.py  benchmarks.py  data_loader.py  feature_engineering.py
notebooks/: RL.ipynb  metricas.py  resultados.ipynb
src/: __init__.py  data_loader.py  feature_engineering.py
src/models/: TD_learning.py
tests/: test_env.py  test_td_agent.py
