[project]
name = "rl-wallet-b3"
version = "0.1.0"
description = ""
authors = [
    {name = "jeanandersonhs",email = "jeanhugo2016@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "numpy (>=2.4.6,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
